# breakthevibe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: commit.md  diagnose.md  explain-code.md  quality.md
.github/workflows/: ci.yml
breakthevibe/: __init__.py  constants.py  exceptions.py  main.py  types.py
breakthevibe/agent/: orchestrator.py  planner.py
breakthevibe/audit/: __init__.py  logger.py
breakthevibe/billing/: __init__.py  plans.py
breakthevibe/config/: logging.py  settings.py
breakthevibe/crawler/: browser.py  crawler.py  extractor.py  navigator.py  network.py
breakthevibe/generator/: case_builder.py  code_builder.py  selector.py
breakthevibe/llm/: anthropic.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider.py
breakthevibe/mapper/: api_merger.py  builder.py  classifier.py
breakthevibe/models/: api.py  database.py  domain.py
breakthevibe/reporter/: collector.py  diff.py
breakthevibe/runner/: executor.py  healer.py  parallel.py
breakthevibe/storage/: artifacts.py  database.py  local_store.py  object_store.py  s3_store.py
breakthevibe/utils/: crypto.py  retry.py  sanitize.py  sitemap_hash.py  timing.py
breakthevibe/web/: app.py  dependencies.py  health.py  middleware.py  pipeline.py  security_headers.py  sse.py  template_engine.py  tenant_context.py  usage.py
breakthevibe/worker/: __init__.py  cli.py  queue.py  runner.py
docs/: audit-report-2026-03-20.md  ui-audit-2026-03-20.md
docs/plans/: 2026-02-24-breakthevibe-design.md  2026-02-24-breakthevibe-implementation.md  2026-02-26-saas-multi-tenant-transformation.md
scripts/: migrate.sh  seed.sh  start.sh
tests/: conftest.py
tests/e2e/: conftest.py  test_full_flow.py  test_pipeline_e2e.py  test_ui_pages.py
(+115 files in other folders)
